2015-03-24  H.J. Lu  <hongjiu.lu@intel.com>

	PR gas/18087
	* write.c (compress_debug): Don't write the zlib header if
	compression didn't make the section smaller.

2015-03-24  Terry Guo  <terry.guo@arm.com>

	* config/tc-arm.c (no_cpu_selected): Use new macro to compare
	features.
	(parse_psr): Likewise.
	(do_t_mrs): Likewise.
	(do_t_msr): Likewise.
	(static const arm_feature_set arm_ext_*): Defined with new macros.
	(static const arm_feature_set arm_cext_*): Likewise.
	(static const arm_feature_set fpu_fpa_ext_*): Likewise.
	(static const arm_feature_set fpu_vfp_ext_*): Likewise.
	(deprecated_coproc_regs): Likewise.
	(UL_BARRIER): Likewise.
	(barrier_opt_names): Likewise.
	(arm_cpus): Likewise.
	(arm_extensions): Likewise.

2015-03-20  H.J. Lu  <hongjiu.lu@intel.com>

	* config/tc-i386.c (i386_align_code): Limit multi-byte nop
	instructions to 10 bytes.

2015-03-19  Nick Clifton  <nickc@redhat.com>

	* config/tc-rl78.c (enum options): Add G13 and G14.
	(md_longopts): Add -mg13 and -mg14.
	(md_parse_option): Handle -mg13 and -mg14.
	(md_show_usage): List -mg13 and -mg14.
	* doc/c-rl78.texi: Add description of -mg13 and -mg14 options.

2015-03-18  Jon Turney  <jon.turney@dronecode.org.uk>
	    Nick Clifton  <nickc@redhat.com>

	PR binutils/18087
	* doc/as.texinfo: Note that when gas compresses debug sections the
	compression is only performed if it makes the section smaller.
	* write.c (compress_debug): Do not compress a debug section if
	doing so would make it larger.

2015-03-17  Ganesh Gopalasubramanian  <Ganesh.Gopalasubramanian@amd.com>

	* config/tc-i386.c (cpu_arch): Add PROCESSOR_ZNVER flags.
	(i386_align_code): Add PROCESSOR_ZNVER cases.
	* config/tc-i386.h (processor_type): Add PROCESSOR_ZNVER.
	* doc/c-i386.texi: Add znver1 and clzero.

2015-03-16  Nick Clifton  <nickc@redhat.com>

	* dwarf2dbg.c (out_header): Remove spurious #if 1.

2015-03-13  Jiong Wang  <jiong.wang@arm.com>

	* config/tc-aarch64.c (warn_unpredictable_ldst): Don't warn on reg